<resources>

    <string name="app_name">Battuta</string>

    <!-- Splash Activity -->

    <array name="quotesArray">
        <item>The world is a book, and those who do not travel read only a page.</item>
        <item>Wherever you go, go with all your heart.</item>
        <item>Every day is a journey, and the journey itself is home.</item>
        <item>A good traveler has no fixed plans, and is not intent on arriving.</item>
        <item>The journey of a thousand miles begins with a single step.</item>
        <item>The real voyage of discovery consists not in seeking new landscapes, but in having new
            eyes.
        </item>
        <item>I read; I travel; I become</item>
        <item>Travel brings power and love back into your life.</item>
    </array>

    <string name="touch_anywhere">Touch anywhere to continue</string>
    <string name="loading">Loading …</string>

    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <!-- Strings related to Main Activity -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_feedback">Send Feedback</string>

    <string name="trips">Trips</string>
    <string name="upcoming">Upcoming Trips</string>
    <string name="done">Done</string>
    <string name="passed">Passed Trips</string>
    <string name="settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="languages">Languages</string>
    <string name="logout">Logout</string>

    <string name="snackbar_trip_added">Trip added to your upcomming trips!</string>
    <string name="snackbar_trip_deleted">Trip deleted!</string>

    <!-- About Dialog -->

    <string name="about_title">About</string>
    <string name="about_contents">This App was developed for the ITI - Android Development Nano program</string>
    <string name="it_was_developed_by">It was developed by:</string>
    <string name="about_notice">press BACK to dismiss</string>


    <!-- Strings related to Trip Edit/Info Activity -->

    <string name="title">Title</string>
    <string name="start">Starting Location</string>
    <string name="end">Destination</string>
    <string name="trip_dateTime">Date and Time</string>
    <string name="roundTrip">Round Trip</string>
    <string name="notes">Notes</string>
    <string name="save_trip">Save Trip</string>
    <string name="update_trip">Update Trip</string>
    <string name="start_trip">Start Trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="starting_location">Starting Location</string>
    <string name="destination">Destination</string>
    <string name="info_start">Start</string>
    <string name="info_edit">Edit</string>
    <string name="info_delete">Delete</string>
    <string name="info_done">Done</string>
    <string name="info_reverse">To\n&lt;  &gt;</string>

    <string name="remind_later">Later</string>
    <string name="remind_dismiss">Dismiss</string>
    <string name="upcoming_trip">Upcoming Trip</string>
    <string name="title_activity_signup">Sign Up</string>
</resources>
