<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/trips" >
        <menu >
            <group>
                <item android:title="@string/upcoming"
                    android:id="@+id/nav_upcoming"
                    android:icon="@drawable/ic_upcoming"/>
                <item android:title="@string/passed"
                    android:id="@+id/nav_passed"
                    android:icon="@drawable/ic_passed" />
            </group>
        </menu>
    </item>

    <item android:title="@string/settings" >
        <menu >
            <item android:title="@string/sync"
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item android:title="@string/about"
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about" />
        </menu>
    </item>
    <item android:title="@string/logout"
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout" />

</menu>
