<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    android:background="@color/cast_expanded_controller_ad_label_background_color">

    <FrameLayout
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:padding="10dp"
        android:layout_height="250dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/aboutTitle"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/about_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutTitle"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="24sp"
                    android:layout_marginBottom="15dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/about_contents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/aboutContents"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <TextView
                        android:text="@string/it_was_developed_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/aboutDeveloped"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:text="Fatma Ali"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fatma"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textAlignment="center" />

                    <TextView
                        android:text="Peter Ayad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/peter"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textAlignment="center" />

                    <TextView
                        android:text="Shaimaa Yassin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shaimaa"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textAlignment="center" />

                    <TextView
                        android:text="Tasnim Marwan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tasnim"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textAlignment="center"
                        android:layout_marginBottom="10dp" />

                </LinearLayout>

                <TextView
                    android:text="@string/about_notice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutNotice"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:layout_above="@+id/aboutContent"
                    android:layout_alignParentStart="true" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</FrameLayout>