<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trip_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="iti_edu.battuta.TripInfoActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        style="@android:style/Widget.Holo.ScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >



                <TextView
                    android:textColor="#0040ff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:ems="10"
                    android:id="@+id/info_edTitle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:text="location"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/txLocation" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >


                    <TextView
                        android:text="@string/start"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/txStart" />

                    <TextView
                        android:text=" "
                        android:textColor="#0040ff"
                        android:layout_width="245dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_start" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >


                    <TextView
                        android:text="@string/end"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/txEnd" />

                    <TextView
                        android:text=" "
                        android:layout_width="245dp"
                        android:layout_height="wrap_content"
                        android:textColor="#0040ff"
                        android:id="@+id/info_end" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="49dp"
                android:orientation="horizontal" >


                <TextView
                    android:text="Data"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="106dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/txData" />
                <TextView
                    android:text="  "
                    android:textColor="#0040ff"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/info_date" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal" >


                <TextView
                    android:text="Time"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="106dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/txTime" />

                <TextView
                    android:text="  "
                    android:textColor="#0040ff"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/info_time" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="Notes"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/txNote" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.Holo.ScrollView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="38dp"
                    android:layout_height="35dp"
                    android:id="@+id/imageEdit"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="290dp"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>